strange ??? rename class 'ico-share' to 'ico-links'
bug? chromium doesn't display the ::after if 'ico-share' is used for
http:// document. (it's ok with file://)

--- a/resume/material-icons.css
+++ b/resume/material-icons.css
@@ -44,7 +44,7 @@
 .ico-school::after {    content: "school"; }
 .ico-business::after {  content: "business"; }
 .ico-forward::after {   content: "forward"; }
-.ico-share::after {     content: "share"; }
+.ico-links::after {     content: "share"; }
 .ico-blank::after {     content: "email"; opacity: 0.0; visibility: hidden; }
 
 /* Class "w-ico-next"    see material-icons.css
