add some margin to <h4>Languages</h4>
(as the initial <br> has been removed)

--- a/resume/canada.css
+++ b/resume/canada.css
@@ -315,6 +315,10 @@ section h4 ,
   width: 5.5em;
 }
 
+h4.languages {
+  margin-top: 1.1cm;
+}
+
 #studies > .study ~ .study { /* apply to all .study elements except first one */
   margin-top: 0.25cm;
 }
