(add not-working CSS rules for "landscape" documents... future use ?)

--- a/resume/paging.css
+++ b/resume/paging.css
@@ -40,6 +40,23 @@ body {
 .page-us.single-page {
   height: 10.2in;	  /* 11in - 2*padding               */
 }
+/* "landscape" class is not ready yet,
+ *  asking by CSS to print in landscape is not so simple...
+ *
+.page-a4.landscape {
+  width: 27.7cm;    /* 29.7cm - 2*padding  *
+}
+.page-us.landscape {
+  width: 10.2in;    /* 11in - 2*padding *
+}
+.page-a4.single-page.landscape {
+  height: 19cm;	  /* 21cm - 2*padding   *
+}
+.page-us.single-page.landscape {
+  height: 7.7in;	  /* 8.5in - 2*padding              *
+}
+**/
+
 
 .page p {
   margin: 0;
