Get rid of "showhide.css"
It was a bad idea. When several html files include this "css" file,
it become unsustainable.
So, use only the "dont-show" class (CSS rule moved in base.css)

--- a/resume/base.css
+++ b/resume/base.css
@@ -1,3 +1,13 @@
+/* If a element has the class "dont-show", it means we don't
+ * want it to be visible. Mostly a "display:none;" would be enough.
+ *
+ *  note: sometimes it's good to comment this rule to discover
+ *        fossiles that should be completely wiped out.
+ */
+.dont-show {
+  display: none;
+}
+
 /* an <li> element with class="sep" is just a separator
  * some other CSS might decorate by changing its height, display a line
  * but the strict minimum is to hide the bullet and the content */
